improved jumping, falling, pause animation, fixed controls

--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@ a {
   -moz-transition: color 300ms ease-in;
   -o-transition: color 300ms ease-in;
   transition: color 300ms ease-in;
-}dddddddddddddd
+}
 
 .container {
   position: relative;
@@ -87,12 +87,14 @@ a {
   width: 40%;
   z-index: 10;
   opacity: 0;
+  visibility: hidden;
   -webkit-transition: opacity 200ms ease-in;
   -moz-transition: opacity 200ms ease-in;
   -o-transition: opacity 200ms ease-in;
   transition: opacity 200ms ease-in;
 }
 .instruction-cta.open {
+  visibility: visible;
   opacity: 1;
 }
 .instruction-cta .inner {
